--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.anupdey.app.compose_playground">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.anupdey.app.compose_playground.StockApplication"
+        android:name="com.anupdey.app.compose_playground.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,9 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StockMarketApp">
         <activity
-            android:name="com.anupdey.app.compose_playground.MainActivity"
+            android:name="com.anupdey.app.compose_playground.presentation.main.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.StockMarketApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
